fix:button width on mobile

--- a/sass/page.module.sass
+++ b/sass/page.module.sass
@@ -64,7 +64,7 @@ section.hero
                 align-items: center
                 cursor: pointer
                 min-height: calc( 58px - 17px * 2 )
-                height: 100%
+                height: fit-content
                 &:hover
                     margin-top: 10px
                 & svg
